[package]
name = "konjingjing"
version = "0.1.0"
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
edition = "2018"
readme = "README.md"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "konjingjing"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = []
classifier = ["Programming Language :: Python"]

