[tool.poetry]
name = "konjingjing"
version = "0.1.1"
description = "A hyper-fast Python module for validating Thai Citizen Card ID."
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
maturin = "^0.8.3"
pytest = "^6.1.2"

[build-system]
requires = ["maturin"]
build-backend = "maturin"

# look for a way to build with custom script?
# https://github.com/sdispater/pendulum